[package]
edition      = "2021"
name         = "esp32-rust"
rust-version = "1.80"
version      = "0.1.0"

[[bin]]
name = "esp32-rust"
path = "./src/bin/main.rs"

[dependencies]

blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc" }

critical-section = "1.2.0"
defmt                  = "1.0.1"
embassy-executor       = { version = "0.7.0", default-features = false }
embassy-time           = { version = "0.4.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }

esp-alloc = { version = "0.8.0" }
esp-backtrace = { version = "0.17.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["defmt", "esp32", "unstable"] }
esp-hal-embassy        = { version = "0.9.0", features = ["esp32"] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32"] }
esp-wifi = { version = "0.15.0", features = ["esp32", "wifi", "smoltcp"] }

smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "proto-ipv4",
  "proto-dhcpv4",
  "proto-dns",
  "socket-udp",
  "socket-tcp",
  "socket-dhcpv4",
  "socket-dns",
  "socket-raw",
  "multicast",
] }
static_cell            = "2.1.0"

[build-dependencies]
dotenvy = "0.15.7"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
